Boxed shadow added for sliders. Bugfix: Spacings of slider nav.

--- a/src/Resources/public/framework/scss/styles/_tiny-slider-design.scss
+++ b/src/Resources/public/framework/scss/styles/_tiny-slider-design.scss
@@ -70,7 +70,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin: 0 $grid-gutter-width;
+        margin: 0 divide($grid-gutter-width, 2);
 
         > button{
           margin: $tns-dot-spacing 0;
@@ -94,6 +94,10 @@
 
 [class*="tns-nav-design"]{
   @include tns-absolute(false, '.tns-nav');
+
+  .tns-outer .tns-nav {
+    margin: divide($grid-gutter-bottom, 2) 0;
+  }
 }
 
 .tns-controls-design-inner{
