--- a/src/Resources/public/framework/scss/styles/_tiny-slider.scss
+++ b/src/Resources/public/framework/scss/styles/_tiny-slider.scss
@@ -22,7 +22,7 @@
 
 .tns-nav{
   text-align: center;
-  margin: $grid-gutter-bottom 0;
+  margin: $grid-gutter-bottom 0 0;
 
   > button{
     display: inline-block;
@@ -45,6 +45,7 @@
   }
 }
 
+
 .tns-controls{
   outline: 0 none;
   margin: $grid-gutter-bottom 0;
@@ -59,6 +60,40 @@
     &:hover{
       color: $tns-color-invert-active;
       background-color: $tns-color-regular-active;
+    }
+  }
+}
+
+.tns-outer {
+  > div:first-child.tns-nav,
+  > div:nth-child(2).tns-nav {
+    margin: 0 0 $grid-gutter-bottom;
+  }
+}
+
+.boxed-shadow {
+
+  .tns-ovh {
+    margin: divide($grid-gutter-width, 2);
+    overflow: visible;
+  }
+
+  .tns-nav {
+    margin: $grid-gutter-bottom divide($grid-gutter-width, 2) divide($grid-gutter-width, 2);
+  }
+
+  .tns-outer {
+    > div:first-child.tns-nav,
+    > div:nth-child(2).tns-nav {
+      margin: divide($grid-gutter-width, 2) divide($grid-gutter-width, 2) $grid-gutter-bottom;
+    }
+  }
+
+  &[class*='tns-nav-design-'][class*='-vr'],
+  &[class*='tns-nav-design-'][class*='-vl'] {
+
+    .tns-outer .tns-nav {
+      margin: 0 $grid-gutter-width;
     }
   }
 }
